--- a/Aarppo/app/src/main/res/values/strings.xml
+++ b/Aarppo/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_preview">PreviewActivity</string>
-    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
-    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
-    <string name="banner_ad_unit_origin">android_studio:ad_template</string>
+    <string name="interstitial_ad_unit_id">ca-app-pub-8985793033242453/5766010127</string>
+    <string name="banner_ad_unit_id">ca-app-pub-8985793033242453/7382344120</string>
+    <string name="banner_ad_unit_origin">Arpo_blasters_banner_1</string>
 </resources>
