--- a/MyChallenge/app/src/main/res/values/strings.xml
+++ b/MyChallenge/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_confirmation_pop_up">ConfirmationPopUp</string>
 </resources>
